Fix app level alert clipping (#180)

--- a/client/src/app/modules/core/app-level-alerts/app-level-alerts.component.scss
+++ b/client/src/app/modules/core/app-level-alerts/app-level-alerts.component.scss
@@ -8,7 +8,7 @@ lc-app-level-alerts {
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    height: 2.5rem;
+    height: fit-content;
     color: #ffffff;
 
     a{
